k8s/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kits-demo-stable
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "vaadin-session"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kits-demo-stable
                port:
                  number: 80
